fixed a bug releated to whitespace on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: "Questrial", sans-serif;
+	overflow-x: hidden;
 	scroll-behavior: smooth;
 }
 section {
@@ -386,6 +387,10 @@ img {
 /* Responsivness */
 
 @media (max-width: 991px) {
+	* {
+		margin: 0;
+		padding: 0;
+	}
 	header,
 	header.sticky {
 		padding: 20px 50px;
@@ -537,5 +542,14 @@ img {
 	}
 	.heading h2 {
 		padding-bottom: 1rem;
+	}
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+	only screen and (-o-min-device-pixel-ratio: 3/2),
+	only screen and (min--moz-device-pixel-ratio: 1.5),
+	only screen and (min-device-pixel-ratio: 1.5) {
+	html,
+	body {
+		width: 100%;
 	}
 }
